[package]
name = "dn-mess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO remove features that aren't required here
tokio = { version = "1", features = ["full"] }
rand = { version = "*" }
log = "0.4"
env_logger = "0.9"
sqlite ="0.24"